<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#5A5958">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_note"
        android:textColor="#FFFFFF"
        android:background="#858382"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etNoteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        android:textColor="#dedddc"
        android:textColorHint="#999999"
        android:textSize="18sp"
        android:maxLines="1"
        android:background="@drawable/et_background"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/etNoteContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_background"
        android:gravity="top"
        android:hint="@string/note_content"
        android:padding="12dp"
        android:textColor="#dedddc"
        android:textColorHint="#999999"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etNoteName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>